# kiro-manager-wb

./: .gitignore  .vscodeignore  CBOR_DONE.md  CBOR_IMPLEMENTATION_DONE.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.txt  PATCH_MANAGEMENT.md  README_CBOR.md  TODO_UI_AUDIT.md  WHATS_NEW.md  package.json  test_out.txt  tsconfig.json
autoreg/: analyze_execute_response.py  cli.py  cli_registration.py  pyproject.toml  requirements.txt
autoreg/api/: __init__.py  codewhisperer_client.py  llm_server.py  quick_chat.py  run_llm_server.py  test_api.py  token_pool.py
autoreg/app/api/: autoreg.py
autoreg/app/static/: app.js  index.html  styles.css
autoreg/core/: cbor_utils.py  config.py  email_generator.py  proxy_checker.py
autoreg/debugger/: run.py
autoreg/docs/: DEV_TRAFFIC_LOGGER.md
autoreg/llm/: codewhisperer_client.py  llm_server.py  quick_chat.py  run_llm_server.py  test_api.py
autoreg/registration/: README_STRATEGIES.md  auth_strategy.py  browser.py  mail_handler.py  oauth_callback_server.py  register.py  register_auto.py  strategy_factory.py  webview_auth.py
autoreg/registration/strategies/: __init__.py  automated_strategy.py  webview_strategy.py
autoreg/scripts/: README.md  analyze_kiro_traffic.py  check_kiro_gpu.py  install_mitmproxy_cert.ps1  kiro_analyzer.py  kiro_fix_lags.py  kiro_monitor.py  patch_status.py  run_kiro_with_proxy.ps1  start_llm_api.bat  test_fingerprint.py  test_patches.py
autoreg/services/: kiro_proxy.py  kiro_service.py  quota_service.py  token_service.py  webportal_client.py
docs/: ANTI_BAN_SUMMARY.md  ARCHITECTURE.md  (+12 more)
(+53 files in other folders)
